# Astro

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Rakefile
.github/workflows/: run_cmake_inclusion_tests.yml
cmake/: AstroAutoDiff.cmake  AstroCatch2.cmake  AstroEigen3.cmake  AstroGTest.cmake  AstroMatplot.cmake  AstroRoot.cmake  AstroSandals.cmake  AstroVersion.cmake  Config.cmake.in
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
docs/: _astro_8hh.html  _astro_8hh.js  _astro_8hh__dep__incl.map  _astro_8hh__incl.map  _astro_8hh__incl.md5  _astro_8hh_source.html  _body_8hh.html  _body_8hh.js  _body_8hh__dep__incl.map  _body_8hh__incl.map  _body_8hh_source.html  _body_8hxx.html  _body_8hxx.js  _body_8hxx__dep__incl.map  _body_8hxx_source.html  _orbit_8hh.html  _orbit_8hh.js  _orbit_8hh__dep__incl.map  _orbit_8hh__incl.map  _orbit_8hh_source.html  _orbit_8hxx.html  _orbit_8hxx.js  _orbit_8hxx__dep__incl.map  _orbit_8hxx_source.html  _orbital_elements_8hh.html  _orbital_elements_8hh.js  _orbital_elements_8hh__dep__incl.map  _orbital_elements_8hh__incl.map  _orbital_elements_8hh_source.html  _orbital_elements_8hxx.html  _orbital_elements_8hxx.js  _orbital_elements_8hxx__dep__incl.map  _orbital_elements_8hxx_source.html  _planets_8hh.html  _planets_8hh.js  _planets_8hh__incl.map  _planets_8hh_source.html  _plotting_8hh.html  _plotting_8hh_source.html  _r_e_a_d_m_e_8md.html  (+134 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Mainpage.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+51 more)
include/: Astro.hh
include/Astro/: Body.hh  Body.hxx  Orbit.hh  Orbit.hxx  OrbitalElements.hh  OrbitalElements.hxx  Planets.hh  Plotting.hh  Utilities.hh  Utilities.hxx
tests/: CMakeLists.txt
tests/Anomaly/: test_anomaly.cc
tests/Body/: test_body.cc
tests/MagneticField/: test_magneticfield.cc
tests/Orbit/: test_Orbit.cc
tests/Plotting/: test_plotting.cc
tests/SunEarthMoon/: plot_orbit.py  satellite_positions.csv  test_sunearthmoon.cc
